--- a/web.html
+++ b/web.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebTech-423</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
     <header>
@@ -19,16 +20,88 @@
     <section id="hero">
         <img src="/avataaars.svg" alt="portrait">
         <h1>Start Bootstrap</h1>
-        
+        <div class="design">
+            <span><hr></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><hr></span>
+        </div>
+        <h4>Graphic Artist - Web Designer - Illustrator</h4>
     </section>
     <section id="portfolio">
-
+        <h2>Portfolio</h2>
+        <div class="design">
+            <span><hr></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><hr></span>
+        </div>
+        <div class="gallery">
+            <div> <img src="cabin.png" alt=""></div>
+            <div> <img src="cake.png" alt=""></div>
+            <div> <img src="circus.png" alt=""></div>
+            <div> <img src="game.png" alt=""></div>
+            <div> <img src="safe.png" alt=""></div>
+            <div> <img src="submarine.png" alt=""></div>
+        </div>
     </section>
     <section id="about">
-
+        <h2>About</h2>
+        <div class="design">
+            <span><hr></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><hr></span>
+        </div>
+        <div class="desc">
+            <div><p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
+            <div><p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
+        </div>
     </section>
     <section id="contact">
-
+        <h2>Contact Me</h2>
+        <div class="design">
+            <span><hr></span>
+            <span><i class="fa fa-star"></i></span>
+            <span><hr></span>
+        </div>
+        <form action="" method="post">
+            <div>
+                <label for="contact-name">Full name</label>
+                <input type="text" name="contact-name" id="contact-name">
+            </div>
+            <div>
+                <label for="contact-email">Email address</label>
+                <input type="email" name="contact-email" id="contact-email">
+            </div>
+            <div>
+                <label for="contact-number">Phone number</label>
+                <input type="number" name="contact-number" id="contact-number">
+            </div>
+            <div>
+                <label for="contact-message">Messages</label>
+                <textarea name="contact-message" id="contact-message" cols="30" rows="10"></textarea>
+            </div>
+            <div>
+                <button class="btn">Send</button>
+            </div>
+        </form>
+    </section>
+    <section id="footer">
+        <div>
+            <h2>Location</h2>
+            <p>2215 John Daniel Drive Clark, MO 65243</p>
+        </div>
+        <div> 
+            <h2>Around the web</h2>
+            <ul class="social-icon">
+                <li><a href=""><img src="facebook-2.svg" alt="facebook"></a></li>
+                <li><a href=""><img src="twitter.svg" alt="twitter"></a></li>
+                <li><a href=""><img src="linkedin-fill.svg" alt="linkedin"></a></li>
+                <li><a href=""><img src="dribble.svg" alt="dribble"></a></li>
+            </ul>
+        </div>
+        <div> 
+            <h2>About Freelancer</h2>
+            <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
+        </div>
     </section>
     <footer></footer>
 </body>
