--- a/web.html
+++ b/web.html
@@ -4,35 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebTech-423</title>
+    <link rel="stylesheet" href="web-tech.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
 </head>
 <body>
+    <!-- navigation bar  -->
     <header>
         <div class="header">
-            <h3 id="logo">Start Bootstrap</h3>
-            <ul>
-                <li><a href="portfolio">Portfolio</a></li>
-                <li><a href="about">About</a></li>
-                <li><a href="contact">Content</a></li>
-            </ul>
+            <div class="nav">
+                <a class= "logo" href="#page top"> Start Bootstrap </a>
+                <ul>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </header>
+    <!-- landing page w/ hero section -->
     <section id="hero">
-        <img src="/avataaars.svg" alt="portrait">
-        <h1>Start Bootstrap</h1>
-        <div class="design">
-            <span><hr></span>
-            <span><i class="fa fa-star"></i></span>
-            <span><hr></span>
-        </div>
-        <h4>Graphic Artist - Web Designer - Illustrator</h4>
+        <div>
+            <img src="avataaars.svg" alt="portrait">
+            <h1>Start Bootstrap</h1>
+            <div class="design">
+                <span class="bar"></span>
+                <span><i class="fa fa-star"></i></span>
+                <span class="bar"></span>
+            </div>
+            <p>Graphic Artist - Web Designer - Illustrator</p>
+        </div>    
     </section>
+    <!-- portfolio section -->
     <section id="portfolio">
         <h2>Portfolio</h2>
         <div class="design">
-            <span><hr></span>
+            <span class="bar"></span>
             <span><i class="fa fa-star"></i></span>
-            <span><hr></span>
+            <span class="bar"></span>
         </div>
         <div class="gallery">
             <div> <img src="cabin.png" alt=""></div>
@@ -43,66 +51,85 @@
             <div> <img src="submarine.png" alt=""></div>
         </div>
     </section>
+    <!-- about me section  -->
     <section id="about">
         <h2>About</h2>
         <div class="design">
-            <span><hr></span>
+            <span class="bar"></span>
             <span><i class="fa fa-star"></i></span>
-            <span><hr></span>
+            <span class="bar"></span>
         </div>
         <div class="desc">
             <div><p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
             <div><p>You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
         </div>
+        <div>
+            <button class="dbtn"><i class="fa-solid fa-download"></i>Free Download!</button>
+        </div>
     </section>
+    <!-- contact me section  -->
     <section id="contact">
         <h2>Contact Me</h2>
         <div class="design">
-            <span><hr></span>
+            <span class="bar"></span>
             <span><i class="fa fa-star"></i></span>
-            <span><hr></span>
+            <span class="bar"></span>
         </div>
-        <form action="" method="post">
-            <div>
-                <label for="contact-name">Full name</label>
-                <input type="text" name="contact-name" id="contact-name">
-            </div>
-            <div>
-                <label for="contact-email">Email address</label>
-                <input type="email" name="contact-email" id="contact-email">
-            </div>
-            <div>
-                <label for="contact-number">Phone number</label>
-                <input type="number" name="contact-number" id="contact-number">
-            </div>
-            <div>
-                <label for="contact-message">Messages</label>
-                <textarea name="contact-message" id="contact-message" cols="30" rows="10"></textarea>
-            </div>
-            <div>
-                <button class="btn">Send</button>
-            </div>
-        </form>
+        <div class="frm">
+            <form action="" method="post">
+                <div>
+                    <label for="contact-name">Full name</label>
+                    <input type="text" name="contact-name" id="contact-name">
+                </div>
+                <div>
+                    <label for="contact-email">Email address</label>
+                    <input type="email" name="contact-email" id="contact-email">
+                </div>
+                <div>
+                    <label for="contact-number">Phone number</label>
+                    <input type="tel" name="contact-number" id="contact-number">
+                </div>
+                <div>
+                    <label for="contact-message">Message</label>
+                    <textarea name="contact-message" id="contact-message" cols="30" rows="10"></textarea>
+                </div>
+                <div>
+                    <button class="btn">Send</button>
+                </div>
+            </form>
+        </div>
     </section>
+    <!-- social, location section  -->
     <section id="footer">
         <div>
-            <h2>Location</h2>
-            <p>2215 John Daniel Drive Clark, MO 65243</p>
+            <h4>Location</h4>
+            <p>2215 John Daniel Drive <br> Clark, MO 65243</p>
         </div>
         <div> 
-            <h2>Around the web</h2>
-            <ul class="social-icon">
+            <h4>Around the web</h4>
+            <!-- <ul class="social-icon">
                 <li><a href=""><img src="facebook-2.svg" alt="facebook"></a></li>
                 <li><a href=""><img src="twitter.svg" alt="twitter"></a></li>
                 <li><a href=""><img src="linkedin-fill.svg" alt="linkedin"></a></li>
                 <li><a href=""><img src="dribble.svg" alt="dribble"></a></li>
+            </ul> -->
+            <ul class="social-icon">
+                <li><a href=""><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-linkedin-in"></i></a></li>
+                <li><a href=""><i class="fa-brands fa-dribbble"></i></a></li>
             </ul>
         </div>
-        <div> 
-            <h2>About Freelancer</h2>
+        <div class="anchor"> 
+            <h4>About Freelancer</h4>
             <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <a href="#">Start Bootstrap</a>.</p>
         </div>
     </section>
-    <footer></footer>
+    <!-- footer section -->
+    <footer>
+        <div class="footer">
+            <p>Copyright &copy; Your Website 2023</p>
+        </div>
+    </footer>
 </body>
 </html>
